k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: capitalx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: aaftabparmar217/capitalx-backend:latest
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /api/docs
            port: 3001
          initialDelaySeconds: 15
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: capitalx
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 3001
    targetPort: 3001
