k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: capitalx


spec:

  replicas: 2


  selector:

    matchLabels:
      app: frontend



  template:

    metadata:

      labels:
        app: frontend


    spec:

      containers:

      - name: frontend

        image: aaftabparmar217/capitalx-frontend:latest
        imagePullPolicy: Always


        ports:

        - containerPort: 3000




---

apiVersion: v1
kind: Service


metadata:

  name: frontend
  namespace: capitalx


spec:

  type: NodePort


  selector:

    app: frontend


  ports:

  - port: 3000
    targetPort: 3000
    nodePort: 30000
